Start on #12 and more work on #1 and #2.

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,6 @@ POSTGRES_USER = #Postgres username.
 POSTGRES_PASSWORD = #Postgres user password.
 POSTGRES_DB = #Postgres DB name.
 
-#Secret Key.
-SECRET_KEY = #Secret key to be used, make sure it's secure.
+#Secret Keys.
+FLASK_SECRET_KEY = #Secret key to be used for Flask, make sure it's secure.
+JWT_SECRET_KEY = #Secret key to be used for JWT, make sure it's secure.
