--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 Flask
+gunicorn
 psycopg2
 flask-wtf
 flask-login
 flask-migrate
 python-dotenv
 flask_restplus
+flask_bootstrap
 flask-sqlalchemy
 flask-jwt-extended
 flask_debugtoolbar #Can remove once done.
