--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ POSTGRES_DB = #Postgres DB name.
 #Secret Keys.
 FLASK_SECRET_KEY = #Secret key to be used for Flask, make sure it's secure.
 JWT_SECRET_KEY = #Secret key to be used for JWT, make sure it's secure.
+
+#API Key
+GOOGLE_MAPS_API_KEY = #Generate one from this URL and restrict it to your website only. https://cloud.google.com/console/google/maps-apis/overview
