Fix tasks completed/incompletion.
* Change times so they refresh.
* Pin requirement versions.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-Flask
-gunicorn
-psycopg2
-pyavagen
-flask-wtf
-flask-login
-flask-moment
-flask-migrate
-python-dotenv
-flask_restplus
-flask_bootstrap
-flask-sqlalchemy
-flask-jwt-extended
+Flask==1.1.1
+psycopg2==2.7.4
+pyavagen==0.3.3
+gunicorn==19.9.0
+flask-wtf==0.14.2
+flask-login==0.4.1
+flask-moment==0.9.0
+flask-migrate==2.5.2
+python-dotenv==0.10.3
+flask_restplus==0.13.0
+flask-sqlalchemy==2.4.1
+flask_bootstrap==3.3.7.1
+flask-jwt-extended==3.24.1
