--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ pyavagen==0.3.3
 gunicorn==19.9.0
 flask-wtf==0.14.2
 flask-login==0.4.1
+flask-admin==1.5.4
 flask-moment==0.9.0
 flask-migrate==2.5.2
 python-dotenv==0.10.3
