Change map API from Google Maps to Mapbox and change password encryption.

--- a/.env.example
+++ b/.env.example
@@ -9,4 +9,4 @@ FLASK_SECRET_KEY=#Secret key to be used for Flask, make sure it's secure.
 JWT_SECRET_KEY=#Secret key to be used for JWT, make sure it's secure.
 
 #API Key
-GOOGLE_MAPS_API_KEY=#Generate one from this URL and restrict it to your website only. https://cloud.google.com/console/google/maps-apis/overview
+MAPBOX_API_KEY=#Generate one from this URL and restrict it to your website only. https://cloud.google.com/console/google/maps-apis/overview
