--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ flask-login==0.4.1
 flask-admin==1.5.4
 flask-moment==0.9.0
 flask-migrate==2.5.2
+flask-argon2==0.1.5.1
 python-dotenv==0.10.3
 flask_socketio==4.2.1
 flask_restplus==0.13.0
