--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,28 @@
 .idea/
 migrations/
 app/static/img/avatars/
+frontend/src/assets/img/avatars/
+frontend/node_modules
+frontend/dist/
 
 #File extensions
 .env
 *.pyc
+.DS_Store
 
 #Files
 flask_profiler.py
+
+#Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
