--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,12 +5,20 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "heroku-prebuild": "npm install",
+    "heroku-postbuild": "webpack --config webpack.dev.js"
   },
   "dependencies": {
     "core-js": "^3.4.3",
+    "leaflet": "^1.6.0",
+    "popper": "^1.0.1",
+    "v-tooltip": "^2.0.2",
     "vue": "^2.6.10",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.1.3",
+    "vue-tables-2": "^1.6.22",
+    "vue2-leaflet": "^2.4.1",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
@@ -21,13 +29,12 @@
     "@vue/cli-service": "^4.1.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.3",
-    "css-loader": "3.4.0",
+    "css-loader": "^3.4.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "style-loader": "1.1.1",
-    "vue-moment": "4.1.0",
-    "vue-tables-2": "1.6.22",
-    "vue-template-compiler": "^2.6.10"
+    "style-loader": "^1.1.1",
+    "vue-loader": "^15.8.3",
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
