--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,7 +13,6 @@ flask-migrate==2.5.2
 flask-argon2==0.1.5.1
 python-dotenv==0.10.3
 flask_socketio==4.2.1
-flask_restplus==0.13.0
 flask-sqlalchemy==2.4.1
+flask-restx==0.13.1.dev0
 flask-jwt-extended==3.24.1
-flask-bootstrap
