--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,14 +5,15 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "heroku-prebuild": "npm install",
-    "heroku-postbuild": "webpack --config webpack.dev.js"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0-beta.1",
+    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.1.0",
     "core-js": "^3.6.1",
+    "jwt-autorefresh": "^0.2.4",
     "leaflet": "^1.6.0",
-    "popper": "^1.0.1",
     "v-tooltip": "^2.0.2",
     "vue": "^2.6.10",
     "vue-moment": "^4.1.0",
