--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
 Flask==1.1.1
-psutil==5.4.8
+psutil==5.6.7
 psycopg2==2.8.4
 pyavagen==0.3.3
 eventlet==0.25.1
@@ -11,8 +11,9 @@ flask-admin==1.5.4
 flask-moment==0.9.0
 flask-migrate==2.5.2
 flask-argon2==0.1.5.1
-python-dotenv==0.10.3
+python-dotenv==0.10.5
 flask_socketio==4.2.1
 flask-sqlalchemy==2.4.1
-flask-restx==0.13.1.dev0
+#flask-restx==0.13.1.dev0
 flask-jwt-extended==3.24.1
+flask-restplus
