--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,18 +8,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.19.0-beta.1",
+    "axios": "^0.19.1",
     "bootstrap": "^4.4.1",
-    "bootstrap-vue": "^2.1.0",
-    "core-js": "^3.6.3",
+    "bootstrap-vue": "^2.2.2",
+    "core-js": "^3.6.4",
     "jwt-autorefresh": "^0.2.4",
     "leaflet": "^1.6.0",
+    "tb-skeleton": "^0.3.6",
     "v-tooltip": "^2.0.2",
     "vue": "^2.6.10",
     "vue-moment": "^4.1.0",
-    "vue-router": "^3.1.3",
+    "vue-router": "^3.1.5",
     "vue-tables-2": "^1.6.23",
+    "vue2-filters": "^0.9.1",
     "vue2-leaflet": "^2.4.2",
+    "vuejs-noty": "^0.1.3",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
@@ -33,7 +36,7 @@
     "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.1.2",
-    "style-loader": "^1.1.2",
+    "style-loader": "^1.1.3",
     "vue-loader": "^15.8.3",
     "vue-template-compiler": "^2.6.11"
   },
