--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,13 @@
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.2.2",
     "core-js": "^3.6.4",
-    "jwt-autorefresh": "^0.2.4",
     "leaflet": "^1.6.0",
-    "tb-skeleton": "^0.3.6",
+    "v-selectpage": "^2.1.4",
     "v-tooltip": "^2.0.2",
     "vue": "^2.6.10",
+    "vue-content-loading": "^1.6.0",
     "vue-moment": "^4.1.0",
+    "vue-multiselect": "^2.1.6",
     "vue-router": "^3.1.5",
     "vue-tables-2": "^1.6.23",
     "vue2-filters": "^0.9.1",
