--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "bootstrap-vue": "^2.2.2",
     "core-js": "^3.6.4",
     "leaflet": "^1.6.0",
+    "tiptap": "^1.26.6",
+    "tiptap-extensions": "^1.28.6",
     "v-selectpage": "^2.1.4",
     "v-tooltip": "^2.0.2",
     "vue": "^2.6.10",
