--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,21 +8,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.19.1",
+    "@xkeshi/image-compressor": "^0.5.3",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
-    "bootstrap-vue": "^2.2.2",
+    "bootstrap-vue": "^2.3.0",
     "core-js": "^3.6.4",
     "leaflet": "^1.6.0",
     "tiptap": "^1.26.6",
     "tiptap-extensions": "^1.28.6",
     "v-selectpage": "^2.1.4",
-    "v-tooltip": "^2.0.2",
+    "v-tooltip": "^2.0.3",
     "vue": "^2.6.10",
     "vue-content-loading": "^1.6.0",
     "vue-moment": "^4.1.0",
     "vue-multiselect": "^2.1.6",
     "vue-router": "^3.1.5",
     "vue-tables-2": "^1.6.23",
+    "vue-upload-component": "^2.8.20",
     "vue2-filters": "^0.9.1",
     "vue2-leaflet": "^2.4.2",
     "vuejs-noty": "^0.1.3",
