--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "vue-multiselect": "^2.1.6",
     "vue-router": "^3.1.5",
     "vue-tables-2": "^1.6.23",
+    "vue-textarea-autosize": "^1.1.1",
     "vue-upload-component": "^2.8.20",
     "vue2-filters": "^0.9.1",
     "vue2-leaflet": "^2.4.2",
