--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ psycopg2==2.8.4
 pyavagen==0.3.3
 eventlet==0.25.1
 gunicorn==20.0.4
+werkzeug==0.16.1
 flask-cors==3.0.8
 flask-wtf==0.14.2
 flask-login==0.4.1
