--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.4.0",
     "core-js": "^3.6.4",
+    "fuzzaldrin-plus": "^0.6.0",
     "leaflet": "^1.6.0",
     "tiptap": "^1.26.6",
     "tiptap-extensions": "^1.28.6",
