--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,16 +19,17 @@
     "tiptap-extensions": "^1.28.6",
     "v-selectpage": "^2.1.4",
     "v-tooltip": "^2.0.3",
-    "vue": "^2.6.10",
+    "vue": "^2.6.11",
     "vue-content-loading": "^1.6.0",
     "vue-moment": "^4.1.0",
     "vue-multiselect": "^2.1.6",
     "vue-router": "^3.1.5",
     "vue-tables-2": "^1.6.25",
+    "vue-text-highlight": "^2.0.10",
     "vue-textarea-autosize": "^1.1.1",
     "vue-upload-component": "^2.8.20",
     "vue2-filters": "^0.9.1",
-    "vue2-leaflet": "^2.4.2",
+    "vue2-leaflet": "^2.5.1",
     "vuejs-noty": "^0.1.3",
     "vuex": "^3.1.2"
   },
