--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,8 +4,9 @@ psycopg2==2.8.4
 pyavagen==0.3.3
 eventlet==0.25.1
 gunicorn==20.0.4
+werkzeug==0.16.1
 flask-cors==3.0.8
-flask-wtf==0.14.2
+flask-wtf==0.14.3
 flask-login==0.5.0
 flask-admin==1.5.5
 flask-restx==0.1.1
