--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.6.4",
     "fuzzaldrin-plus": "^0.6.0",
     "leaflet": "^1.6.0",
+    "leaflet.heat": "^0.2.0",
     "tiptap": "^1.26.6",
     "tiptap-extensions": "^1.28.6",
     "v-selectpage": "^2.1.4",
@@ -29,16 +30,16 @@
     "vue-textarea-autosize": "^1.1.1",
     "vue-upload-component": "^2.8.20",
     "vue2-filters": "^0.9.1",
-    "vue2-leaflet": "^2.5.1",
+    "vue2-leaflet": "^2.5.2",
     "vuejs-noty": "^0.1.3",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.1.2",
-    "@vue/cli-plugin-eslint": "^4.1.2",
-    "@vue/cli-plugin-router": "^4.1.2",
-    "@vue/cli-plugin-vuex": "^4.1.2",
-    "@vue/cli-service": "^4.1.2",
+    "@vue/cli-plugin-babel": "^4.2.2",
+    "@vue/cli-plugin-eslint": "^4.2.2",
+    "@vue/cli-plugin-router": "^4.2.2",
+    "@vue/cli-plugin-vuex": "^4.2.2",
+    "@vue/cli-service": "^4.2.2",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.3",
     "css-loader": "^3.4.2",
