--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "bootstrap-vue": "^2.4.0",
     "core-js": "^3.6.4",
     "fuzzaldrin-plus": "^0.6.0",
+    "html-to-text": "^5.1.1",
     "leaflet": "^1.6.0",
     "leaflet.heat": "^0.2.0",
     "tiptap": "^1.26.6",
@@ -25,6 +26,7 @@
     "vue-moment": "^4.1.0",
     "vue-multiselect": "^2.1.6",
     "vue-router": "^3.1.5",
+    "vue-social-sharing": "^2.4.7",
     "vue-tables-2": "^1.6.25",
     "vue-text-highlight": "^2.0.10",
     "vue-textarea-autosize": "^1.1.1",
