--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,9 +11,11 @@ flask-login==0.5.0
 flask-admin==1.5.5
 flask-restx==0.1.1
 flask-moment==0.9.0
+mailjet-rest==1.3.3
 flask-migrate==2.5.2
 flask-argon2==0.1.5.1
 python-dotenv==0.11.0
 flask_socketio==4.2.1
 flask-sqlalchemy==2.4.1
 flask-jwt-extended==3.24.1
+git+https://github.com/flask-legacy/flask-mail@7c330d6
