--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,12 @@
 Flask==1.1.1
+async==0.6.2
 psutil==5.6.7
 psycopg2==2.8.4
 pyavagen==0.3.3
 eventlet==0.25.1
 gunicorn==20.0.4
 werkzeug==0.16.1
+flask-mail==0.9.1
 flask-cors==3.0.8
 flask-wtf==0.14.3
 flask-login==0.5.0
@@ -18,4 +20,3 @@ python-dotenv==0.11.0
 flask_socketio==4.2.1
 flask-sqlalchemy==2.4.1
 flask-jwt-extended==3.24.1
-git+https://github.com/flask-legacy/flask-mail@7c330d6
