--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^4.5.1",
     "@xkeshi/image-compressor": "^0.5.3",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
@@ -17,16 +18,21 @@
     "html-to-text": "^5.1.1",
     "leaflet": "^1.6.0",
     "leaflet.heat": "^0.2.0",
+    "mapbox-gl": "^1.7.0",
+    "socket.io-client": "^2.3.0",
     "tiptap": "^1.26.6",
     "tiptap-extensions": "^1.28.6",
     "v-selectpage": "^2.1.4",
     "v-tooltip": "^2.0.3",
     "vue": "^2.6.11",
     "vue-content-loading": "^1.6.0",
+    "vue-mapbox": "^0.4.1",
+    "vue-mapbox-geocoder": "^0.2.0",
     "vue-moment": "^4.1.0",
     "vue-multiselect": "^2.1.6",
     "vue-router": "^3.1.5",
     "vue-social-sharing": "^2.4.7",
+    "vue-socket.io-extended": "^4.0.1",
     "vue-tables-2": "^2.0.0",
     "vue-text-highlight": "^2.0.10",
     "vue-textarea-autosize": "^1.1.1",
