--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,6 @@ async==0.6.2
 psutil==5.6.7
 psycopg2==2.8.4
 pyavagen==0.3.3
-eventlet==0.25.1
 gunicorn==20.0.4
 werkzeug==0.16.1
 flask-mail==0.9.1
@@ -19,4 +18,5 @@ flask-argon2==0.1.5.1
 python-dotenv==0.11.0
 flask_socketio==4.2.1
 flask-sqlalchemy==2.4.1
+gevent-websocket==0.10.1
 flask-jwt-extended==3.24.1
