--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,3 +1,11 @@
+upstream socket_nodes {
+    # Socket.IO requires sticky sessions.
+    ip_hash;
+
+    server 127.0.0.1:5000;
+    # To scale the app, just add more nodes here.
+}
+
 server {
   listen $PORT;
 
@@ -45,10 +53,10 @@ server {
   }
 
   location /socket.io {
-    proxy_pass http://127.0.0.1:5000/socket.io;
-    proxy_http_version 1.1;
-    proxy_buffering off;
-    proxy_redirect      default;
+    proxy_pass          http://socket_nodes;
+    proxy_http_version  1.1;
+    proxy_buffering     off;
+    proxy_redirect      off;
     proxy_set_header    Upgrade $http_upgrade;
     proxy_set_header    Connection "Upgrade";
     proxy_set_header    Host $host;
