--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "postbuild": "node_modules/purgecss/bin/purgecss --config ./purgecss.config.js --output ./dist/css",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -43,6 +44,7 @@
     "vuex": "^3.1.2"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^2.0.6",
     "@vue/cli-plugin-babel": "^4.2.2",
     "@vue/cli-plugin-eslint": "^4.2.2",
     "@vue/cli-plugin-router": "^4.2.2",
@@ -53,6 +55,7 @@
     "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.2.1",
+    "purgecss": "^2.0.6",
     "style-loader": "^1.1.3",
     "vue-loader": "^15.9.0",
     "vue-template-compiler": "^2.6.11"
