--- a/.env.docker-example
+++ b/.env.docker-example
@@ -1,3 +1,5 @@
+#Env file used to pass to Docker.
+
 #Postgres Settings.
 POSTGRES_URL=#Postgres server URL.
 POSTGRES_USER=#Postgres username.
@@ -8,9 +10,6 @@ POSTGRES_DB=#Postgres DB name.
 FLASK_SECRET_KEY=#Secret key to be used for Flask, make sure it's secure.
 JWT_SECRET_KEY=#Secret key to be used for JWT, make sure it's secure.
 
-#API Key
-VUE_APP_MAPBOX_API_KEY=#Generate one from this URL and restrict it to your website only. https://cloud.google.com/console/google/maps-apis/overview
-
 #Email Settings.
 MAIL_SERVER=#Mail server URL.
 MAIL_PORT=#Mail server port.
@@ -18,6 +17,12 @@ MAIL_USE_TLS=False#True/False to use TLS or not, default is false.
 MAIL_USE_SSL=True#True/False to use SSL or not, default is true.
 MAIL_USERNAME=#Email to use.
 MAIL_PASSWORD=#Password for email.
+
+#Vue Map's.
+VUE_APP_MAPBOX_API_KEY=#Generate one from this URL and restrict it to your website only. https://www.mapbox.com/
+VUE_APP_MAP_TILE_SERVER_NAME=#Name of the map tile server, e.g Wikimedia Maps
+VUE_APP_MAP_TILE_SERVER_Url=#Url to the tile server without the $, e.g https://maps.wikimedia.org/osm-intl/{z}/{x}/{y}.png
+VUE_APP_MAP_TILE_SERVER_Link=#Link to redirect users to if they click the attribution at the bottom right of the map, e.g https://foundation.wikimedia.org/wiki/Maps_Terms_of_Use
 
 #Misc.
 DOMAIN_NAME=#Domain name. Example, google.com
