--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,16 +12,18 @@
     "@xkeshi/image-compressor": "^0.5.3",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
-    "bootstrap-vue": "^2.5.0",
+    "bootstrap-vue": "^2.6.1",
     "core-js": "^3.6.4",
+    "es6-dynamic-template": "^2.0.0",
     "fuzzaldrin-plus": "^0.6.0",
     "html-to-text": "^5.1.1",
     "leaflet": "^1.6.0",
     "leaflet.heat": "^0.2.0",
-    "mapbox-gl": "^1.8.0",
+    "mapbox-gl": "^1.8.1",
     "socket.io-client": "^2.3.0",
     "tiptap": "^1.26.6",
     "tiptap-extensions": "^1.28.6",
+    "v-runtime-template": "^1.10.0",
     "v-selectpage": "^2.1.4",
     "v-tooltip": "^2.0.3",
     "vue": "^2.6.11",
@@ -30,29 +32,30 @@
     "vue-mapbox-geocoder": "^0.2.0",
     "vue-moment": "^4.1.0",
     "vue-multiselect": "^2.1.6",
-    "vue-router": "^3.1.5",
+    "vue-router": "^3.1.6",
     "vue-social-sharing": "^2.4.7",
     "vue-socket.io-extended": "^4.0.1",
-    "vue-tables-2": "^2.0.0",
+    "vue-tables-2": "^2.0.7",
     "vue-text-highlight": "^2.0.10",
     "vue-textarea-autosize": "^1.1.1",
     "vue-upload-component": "^2.8.20",
     "vue2-filters": "^0.9.1",
     "vue2-leaflet": "^2.5.2",
     "vuejs-noty": "^0.1.3",
-    "vuex": "^3.1.2"
+    "vuejs-paginate": "^2.1.0",
+    "vuex": "^3.1.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.2.2",
-    "@vue/cli-plugin-eslint": "^4.2.2",
-    "@vue/cli-plugin-router": "^4.2.2",
-    "@vue/cli-plugin-vuex": "^4.2.2",
-    "@vue/cli-service": "^4.2.2",
+    "@vue/cli-plugin-babel": "^4.2.3",
+    "@vue/cli-plugin-eslint": "^4.2.3",
+    "@vue/cli-plugin-router": "^4.2.3",
+    "@vue/cli-plugin-vuex": "^4.2.3",
+    "@vue/cli-service": "^4.2.3",
     "@vue/eslint-config-standard": "^4.0.0",
-    "babel-eslint": "^10.0.3",
+    "babel-eslint": "^10.1.0",
     "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
-    "eslint-plugin-vue": "^6.2.1",
+    "eslint-plugin-vue": "^6.2.2",
     "style-loader": "^1.1.3",
     "vue-loader": "^15.9.0",
     "vue-template-compiler": "^2.6.11"
