Added notifications, user settings and forgotten password.

--- a/.env.docker-example
+++ b/.env.docker-example
@@ -1,28 +1,45 @@
 #Env file used to pass to Docker.
 
 #Postgres Settings.
-POSTGRES_URL=#Postgres server URL.
-POSTGRES_USER=#Postgres username.
-POSTGRES_PASSWORD=#Postgres user password.
-POSTGRES_DB=#Postgres DB name.
+#Postgres server URL.
+POSTGRES_URL=
+#Postgres username.
+POSTGRES_USER=
+#Postgres user password.
+POSTGRES_PASSWORD=
+#Postgres DB name.
+POSTGRES_DB=
 
 #Secret Keys.
-FLASK_SECRET_KEY=#Secret key to be used for Flask, make sure it's secure.
-JWT_SECRET_KEY=#Secret key to be used for JWT, make sure it's secure.
+#Secret key to be used for Flask, make sure it's secure.
+FLASK_SECRET_KEY=
+#Secret key to be used for JWT, make sure it's secure.
+JWT_SECRET_KEY=
 
 #Email Settings.
-MAIL_SERVER=#Mail server URL.
-MAIL_PORT=#Mail server port.
-MAIL_USE_TLS=False#True/False to use TLS or not, default is false.
-MAIL_USE_SSL=True#True/False to use SSL or not, default is true.
-MAIL_USERNAME=#Email to use.
-MAIL_PASSWORD=#Password for email.
+#Mail server URL.
+MAIL_SERVER=
+#Mail server port.
+MAIL_PORT=
+#True/False to use TLS or not, default is false.
+MAIL_USE_TLS=False
+#True/False to use SSL or not, default is true.
+MAIL_USE_SSL=True
+#Email to use.
+MAIL_USERNAME=
+#Password for email.
+MAIL_PASSWORD=
 
 #Vue Map's.
-VUE_APP_MAPBOX_API_KEY=#Generate one from this URL and restrict it to your website only. https://www.mapbox.com/
-VUE_APP_MAP_TILE_SERVER_NAME=#Name of the map tile server, e.g Wikimedia Maps
-VUE_APP_MAP_TILE_SERVER_Url=#Url to the tile server without the $, e.g https://maps.wikimedia.org/osm-intl/{z}/{x}/{y}.png
-VUE_APP_MAP_TILE_SERVER_Link=#Link to redirect users to if they click the attribution at the bottom right of the map, e.g https://foundation.wikimedia.org/wiki/Maps_Terms_of_Use
+#Generate one from this URL and restrict it to your website only. https://www.mapbox.com/
+VUE_APP_MAPBOX_API_KEY=
+#Name of the map tile server, e.g Wikimedia Maps
+VUE_APP_MAP_TILE_SERVER_NAME=
+#Url to the tile server without the $, e.g https://maps.wikimedia.org/osm-intl/{z}/{x}/{y}.png
+VUE_APP_MAP_TILE_SERVER_Url=
+#Link to redirect users to if they click the attribution at the bottom right of the map, e.g https://foundation.wikimedia.org/wiki/Maps_Terms_of_Use
+VUE_APP_MAP_TILE_SERVER_Link=
 
 #Misc.
-DOMAIN_NAME=#Domain name. Example, google.com
+#Domain name. Example, google.com
+DOMAIN_NAME=
