--- a/frontend/.env.local.development-example
+++ b/frontend/.env.local.development-example
@@ -1,7 +1,11 @@
 #Env file used in development.
 
 #Vue Map's
-VUE_APP_MAPBOX_API_KEY=#Generate one from this URL and restrict it to your website only. https://www.mapbox.com/
-VUE_APP_MAP_TILE_SERVER_NAME=#Name of the map tile server, e.g Wikimedia Maps
-VUE_APP_MAP_TILE_SERVER_Url=#Url to the tile server without the $, e.g https://maps.wikimedia.org/osm-intl/{z}/{x}/{y}.png
-VUE_APP_MAP_TILE_SERVER_Link=#Link to redirect users to if they click the attribution at the bottom right of the map, e.g https://foundation.wikimedia.org/wiki/Maps_Terms_of_Use
+#Generate one from this URL and restrict it to your website only. https://www.mapbox.com/
+VUE_APP_MAPBOX_API_KEY=
+#Name of the map tile server, e.g Wikimedia Maps
+VUE_APP_MAP_TILE_SERVER_NAME=
+#Url to the tile server without the $, e.g https://maps.wikimedia.org/osm-intl/{z}/{x}/{y}.png
+VUE_APP_MAP_TILE_SERVER_Url=
+#Link to redirect users to if they click the attribution at the bottom right of the map, e.g https://foundation.wikimedia.org/wiki/Maps_Terms_of_Use
+VUE_APP_MAP_TILE_SERVER_Link=
