--- a/backend/app/.env.development-example
+++ b/backend/app/.env.development-example
@@ -5,15 +5,15 @@
 POSTGRES_URL=
 #Postgres username.
 POSTGRES_USER=
-#Postgres user password.
-POSTGRES_PASSWORD=
 #Postgres DB name.
 POSTGRES_DB=
+#Postgres user password.
+POSTGRES_PASSWORD=
 
 #Secret Keys.
-#Secret key to be used for Flask, make sure it's secure.
+#Secret key to be used for Flask, make sure it's secure. Generate one.
 FLASK_SECRET_KEY=
-#Secret key to be used for JWT, make sure it's secure.
+#Secret key to be used for JWT, make sure it's secure. Generate one.
 JWT_SECRET_KEY=
 
 #Email Settings.
@@ -25,11 +25,11 @@ MAIL_PORT=
 MAIL_USE_TLS=False
 #True/False to use SSL or not, default is true.
 MAIL_USE_SSL=True
-#Email to use.
+#Username for mail server account.
 MAIL_USERNAME=
-#Password for email.
+#Password for mail server account.
 MAIL_PASSWORD=
 
 #Misc.
-#Domain name. Example, google.com
+#Website domain name. Example, dgvost.co.uk
 DOMAIN_NAME=
