--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -28,8 +28,8 @@ server {
     proxy_set_header    X-Forwarded-Host $server_name;
   }
 
-  location /static {
-    alias               /static/;
+  location /static/ {
+    alias               /app/app/static/;
   }
 
   location /swaggerui {
