Added user avatar and bug fixes.

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,6 +9,7 @@ upstream socket_nodes {
 server {
   listen $PORT;
 
+  client_max_body_size 40M;
   root /usr/share/nginx/html;
   index index.html index.html;
 
