--- a/dc-dgvost-postgresdb.example.yml
+++ b/dc-dgvost-postgresdb.example.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: postgres
-        image: postgres:12
+        image: postgres:latest
         resources:
           requests:
             cpu: "500m"
