--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,21 +12,23 @@
     "@xkeshi/image-compressor": "^0.5.3",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
-    "bootstrap-vue": "^2.7.0",
+    "bootstrap-vue": "^2.10.1",
     "core-js": "^3.6.4",
+    "cropperjs": "^1.5.6",
     "es6-dynamic-template": "^2.0.0",
     "fuzzaldrin-plus": "^0.6.0",
     "html-to-text": "^5.1.1",
     "leaflet": "^1.6.0",
     "leaflet.heat": "^0.2.0",
-    "mapbox-gl": "^1.8.1",
+    "mapbox-gl": "^1.9.1",
     "socket.io-client": "^2.3.0",
-    "tiptap": "^1.26.6",
-    "tiptap-extensions": "^1.28.6",
+    "tiptap": "^1.26.8",
+    "tiptap-extensions": "^1.28.8",
     "v-runtime-template": "^1.10.0",
     "v-selectpage": "^2.1.4",
     "v-tooltip": "^2.0.3",
     "vue": "^2.6.11",
+    "vue-avatar-cropper": "^1.0.6",
     "vue-content-loading": "^1.6.0",
     "vue-mapbox": "^0.4.1",
     "vue-mapbox-geocoder": "^0.2.0",
@@ -35,7 +37,7 @@
     "vue-router": "^3.1.6",
     "vue-social-sharing": "^2.4.7",
     "vue-socket.io-extended": "^4.0.1",
-    "vue-tables-2": "^2.0.9",
+    "vue-tables-2": "^2.0.14",
     "vue-text-highlight": "^2.0.10",
     "vue-textarea-autosize": "^1.1.1",
     "vue-upload-component": "^2.8.20",
@@ -46,14 +48,14 @@
     "vuex": "^3.1.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.2.3",
-    "@vue/cli-plugin-eslint": "^4.2.3",
-    "@vue/cli-plugin-router": "^4.2.3",
-    "@vue/cli-plugin-vuex": "^4.2.3",
-    "@vue/cli-service": "^4.2.3",
+    "@vue/cli-plugin-babel": "^4.3.0",
+    "@vue/cli-plugin-eslint": "^4.3.0",
+    "@vue/cli-plugin-router": "^4.3.0",
+    "@vue/cli-plugin-vuex": "^4.3.0",
+    "@vue/cli-service": "^4.3.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.1.0",
-    "css-loader": "^3.4.2",
+    "css-loader": "^3.5.0",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.2.2",
     "style-loader": "^1.1.3",
